--- a/HomePage/home.html
+++ b/HomePage/home.html
@@ -10,8 +10,9 @@
 
 <body>
     <nav>
-        <a href="../HomePage/home.html" id="FUNI-logo"><h1>FUNI</h1><img
-                src="../images/IMG_0049.jpg" alt="FUNI logo"></a>
+        <a href="../HomePage/home.html" id="FUNI-logo">
+            <h1>FUNI</h1><img src="../images/IMG_0049.jpg" alt="FUNI logo">
+        </a>
         <ul>
             <li><a href="../Calendar/calendar.html">CALENDAR</a></li>
             <li><a href="../GoalTracker/goal.html">GOAL TRACKER</a></li>
@@ -25,66 +26,69 @@
                         CALCULATOR</a>
                 </div>
             </li>
-            <li class="dropdown">USERNAME
-                <div class="dropdown-content">
-                    <a href="#">EDIT PROFILE</a>
-                    <a href="#">OPTIONS</a>
-                    <a href="#">LOGOUT</a>
-                </div>
-            </li>
+            <li><a href="../Login/index.php">LOGIN</a></li>
+            <li><a href="../Sign Up/signup.php">SIGN UP</a></li>
         </ul>
     </nav>
     <div class="home-page">
-    <div class="slideshow-container">
-        <div class="slides">
-            <img src="../images/money.jpg" alt="Money IMG">
+        <div class="slideshow-container">
+            <div class="slides">
+                <img src="../images/money.jpg" alt="Money IMG">
+            </div>
+            <div class="slides">
+                <img src="../images/" alt="Calendar IMG">
+            </div>
+            <div class="slides">
+                <img src="../images/" alt="Salary Calculator IMG">
+            </div>
+            <div class="slides">
+                <img src="../images/" alt="Loan Calculator IMG">
+            </div>
+            <div class="slides">
+                <img src="../images/" alt="Budget Calculator IMG">
+            </div>
+            <div class="slides">
+                <img src="../images/" alt="Goal Tracker IMG">
+            </div>
+            <div class="slides">
+                <img src="../images/" alt="">
+            </div>
         </div>
-        <div class="slides">
-            <img src="../images/" alt="Calendar IMG">
-        </div>
-        <div class="slides">
-            <img src="../images/" alt="Salary Calculator IMG">
-        </div>
-        <div class="slides">
-            <img src="../images/" alt="Loan Calculator IMG">
-        </div>
-        <div class="slides">
-            <img src="../images/" alt="Budget Calculator IMG">
-        </div>
-        <div class="slides">
-            <img src="../images/" alt="Goal Tracker IMG">
-        </div>
-        <div class="slides">
-            <img src="../images/" alt="">
-        </div>
-    </div>
 
-    <div class="about-us-section">
-        <h2 class="about-US">
-            ABOUT US
-        </h2>
-        <div class="description">
-            <p>
-                What is FUNI? FUNI is an abbreviation for Finance University. Welcome to Financial University, where we empower young adults to take control of their finances with ease and confidence. Our mission is to instill consistency and mindfulness in managing expenses, loans, and budgets. With our intuitive tools, including a dynamic calendar with reminders, budget calculator, loan calculator, salary calculator, and goal tracker, we provide a comprehensive platform to help you stay on track financially. Whether you're navigating student loans, saving for a dream vacation, or planning for the future, our website equips you with the resources and support you need to make informed decisions and achieve your financial goals. Your journey towards financial freedom and stability begins with FUNI.
-            </p>
+        <div class="about-us-section">
+            <h2 class="about-US">
+                ABOUT US
+            </h2>
+            <div class="description">
+                <p>
+                    What is FUNI? FUNI is an abbreviation for Finance University. Welcome to Financial University, where
+                    we empower young adults to take control of their finances with ease and confidence. Our mission is
+                    to instill consistency and mindfulness in managing expenses, loans, and budgets. With our intuitive
+                    tools, including a dynamic calendar with reminders, budget calculator, loan calculator, salary
+                    calculator, and goal tracker, we provide a comprehensive platform to help you stay on track
+                    financially. Whether you're navigating student loans, saving for a dream vacation, or planning for
+                    the future, our website equips you with the resources and support you need to make informed
+                    decisions and achieve your financial goals. Your journey towards financial freedom and stability
+                    begins with FUNI.
+                </p>
+            </div>
         </div>
-    </div>
     </div>
 
     <script>
         var slide_index = 0;
         showSlides();
-        function plusSlides(n){
+        function plusSlides(n) {
             showSlides(slide_index += n);
         }
-        function showSlides(){
+        function showSlides() {
             var i;
             var slides = document.getElementsByClassName("slides");
-            for (i = 0; i < slides.length; i++){
+            for (i = 0; i < slides.length; i++) {
                 slides[i].style.display = "none";
             }
             slide_index++;
-            if (slide_index > slides.length){
+            if (slide_index > slides.length) {
                 slide_index = 1;
             }
             slides[slide_index - 1].style.display = "block";
