attempt at debugging

--- a/Billing/budget_calc.html
+++ b/Billing/budget_calc.html
@@ -27,7 +27,7 @@
                         CALCULATOR</a>
                 </div>
             </li>
-            <li><a href="../Login/index.php">LOGIN</a></li>
+            <li><a href="../Login/log.php">LOGIN</a></li>
             <li><a href="../Sign Up/signup.php">SIGN UP</a></li>
         </ul>
     </nav>
