Goal Tracker Update

--- a/GoalTracker/goal.html
+++ b/GoalTracker/goal.html
@@ -90,6 +90,7 @@
                 }
                 if (percent >= 100){
                     currentgoal.value = 0;
+                    addsavingsfromchecking.value = 0;
                     progressbar.value = 0;
                     const date = new Date().toLocaleString();
                     alert("Goal achieved on " + date + "!");
